Loads of changes
Nothing to say at the moment.

--- a/public/applications/portfolio/index.html
+++ b/public/applications/portfolio/index.html
@@ -4,6 +4,13 @@
 
   </head>
   <body>
-    <h1>Hello worlds!</h1>
+    <div class="hero">
+        <button class="button small basic"></button>
+        <button class="button small primary"></button>
+        <button class="button small warning"></button>
+    </div>
+    <div class="main wrapper">
+
+    </div>
 <script type="text/javascript" src="portfolio.1.0.0.js"></script></body>
 </html>
