--- a/public/applications/portfolio/index.html
+++ b/public/applications/portfolio/index.html
@@ -10,7 +10,9 @@
         <button class="button small warning"></button>
     </div>
     <div class="main wrapper">
-
+        <svg height="100" width="100">
+            <use href="#loader-4"/>
+        </svg>
     </div>
 <script type="text/javascript" src="portfolio.1.0.0.js"></script></body>
 </html>
